my first commit

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 					<p class="mb-4">
 						<span class="t-secondary" data-es="Estudiante de doctorado en Arquitectura de Computadores en la Universidad de Murcia y CTO en " 
-						data-en="Ph.D. Computer Architecture Student at University of Murcia and CTO at "></span> <a href="https://mowatave.com" class="link-dark" target="_blank">Mowatave</a>.
+						data-en="B.Sc. Computer Science Graduate from ></span> <a href="https://aauekpoma.edu.ng/" class="link-dark" target="_blank">Ambrose Alli University</a>.
 					</p>
 					
 					<div class="row mb-2">
@@ -151,13 +151,13 @@
 						<div class="col-10">
 							<span 
 								data-es="Área Metropolitana" 
-								data-en="Greater Murcia Metropolitan Area">
+								data-en="Lagos">
 							</span> 
 							<br/>
 							Murcia, 
 							<span 
 								data-es="España" 
-								data-en="Spain">
+								data-en="Nigeria">
 							</span>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="mailto:n.mesegueriborra@um.es" class="link-dark">n.mesegueriborra@um.es</a>
+							<a href="mailto:gracealele@gmail.com" class="link-dark">gracealele@gmail.com</a>
 						</div>
 					</div>
 
@@ -188,7 +188,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://www.linkedin.com/in/nicolasmeseguer/" class="link-dark" target="_blank">LinkedIn</a>
+							<a href="https://www.linkedin.com/in/gracealele/" class="link-dark" target="_blank">LinkedIn</a>
 						</div>
 					</div>
 
@@ -198,7 +198,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://twitter.com/NicolasMeseguer" class="link-dark" target="_blank">Twitter</a>
+							<a href="https://x.com/call_me_oma" class="link-dark" target="_blank">Twitter</a>
 						</div>
 					</div>
 
@@ -208,7 +208,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://github.com/NicolasMeseguer" class="link-dark" target="_blank">GitHub</a>
+							<a href="https://github.com/GraceAlele" class="link-dark" target="_blank">GitHub</a>
 						</div>
 					</div>
 
@@ -217,12 +217,13 @@
 							<i class="fab fa-gitlab" aria-hidden="true"></i>
 						</div>
 
-						<div class="col-10">
+<!--						<div class="col-10">
 							<a href="https://gitlab.com/NicolasMeseguer" class="link-dark" target="_blank">GitLab</a>
 						</div>
+						-->
 					</div>
 
-					<div class="row mb-2">
+	<!--				<div class="row mb-2">
 						<div class="col-1">
 							<i class="fa-solid fa-plus"></i>
 						</div>
@@ -231,6 +232,7 @@
 							<a href="https://fseneca.es/tfs/fpi/ficha/8362" class="link-dark" target="_blank"><img class="fseneca" src="/assets/documents/imgs/fseneca-color.svg" alt="Fundación Séneca"></a>
 						</div>
 					</div>
+					-->
 				</div>
 
 				<!-- About Me -->
