--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<meta name="description" content="Nicolas Meseguer's website, biography, education, previous experience and published papers."/>
+		<meta name="description" content="Grace Alele's website, biography, education, previous experience and published papers."/>
 		<meta name="keywords" content="nicolasmeseguer, NicolasMeseguer, Nicolas Meseguer, nicolas meseguer youtube, nicolas meseguer github, nicolas meseguer murcia, nicolas meseguer cv, nicolas meseguer portfolio"/>
 		
 		<meta name="author" content="Nicolas Meseguer" />
 		<meta name="copyright" content="Work protected by copyright; no distribution without permission." />
 		
 		<!-- Title + Icon -->
-		<title>Nicolas Meseguer</title>
+		<title>Grace Alele</title>
 		<link rel="icon" type="image/x-icon" href="assets/documents/imgs/NicolasMeseguer.ico">
 
 		<!-- Improve SEO -->
@@ -132,11 +132,11 @@
 				<div id="leftPanel" class="col-md-3 language">
 					<div class="row mb-3">
 						<div class="col">
-							<img src="assets/documents/imgs/NicolasMeseguer.webp" class="rounded me-auto d-block img-fluid profilepicture" alt="Nicolas Meseguer profile picture">
+							<img src="assets/documents/imgs/passport.jpg" class="rounded me-auto d-block img-fluid profilepicture" alt="Nicolas Meseguer profile picture">
 						</div>
 					</div>
 
-					<h3 class="mb-2">Nicolás Meseguer</h3>
+					<h3 class="mb-2">Grace Alele</h3>
 
 					<p class="mb-4">
 						<span class="t-secondary" data-es="Estudiante de doctorado en Arquitectura de Computadores en la Universidad de Murcia y CTO en " 
@@ -150,8 +150,7 @@
 
 						<div class="col-10">
 							<span 
-								data-es="Área Metropolitana" 
-								data-en="Lagos">
+								data-en="Lagos,">
 							</span> 
 							<br/>
 							Murcia, 
