--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 					<p class="mb-4">
 						<span class="t-secondary" data-es="Estudiante de doctorado en Arquitectura de Computadores en la Universidad de Murcia y CTO en " 
-						data-en="B.Sc. Computer Science Graduate from ></span> <a href="https://aauekpoma.edu.ng/" class="link-dark" target="_blank">Ambrose Alli University</a>.
+						data-en="B.Sc. Computer Science Graduate from "></span> <a href="https://aauekpoma.edu.ng/" class="link-dark" target="_blank">Ambrose Alli University</a>.
 					</p>
 					
 					<div class="row mb-2">
@@ -151,9 +151,7 @@
 						<div class="col-10">
 							<span 
 								data-en="Lagos,">
-							</span> 
-							<br/>
-							Murcia, 
+							</span>  
 							<span 
 								data-es="España" 
 								data-en="Nigeria">
@@ -211,12 +209,13 @@
 						</div>
 					</div>
 
+<!--
 					<div class="row mb-2">
 						<div class="col-1">
 							<i class="fab fa-gitlab" aria-hidden="true"></i>
 						</div>
 
-<!--						<div class="col-10">
+						<div class="col-10">
 							<a href="https://gitlab.com/NicolasMeseguer" class="link-dark" target="_blank">GitLab</a>
 						</div>
 						-->
