--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 					<div class="row mb-2">
 						<div class="col-1">
-							<i class="fab fa-gitlab" aria-hidden="true"></i>
+							<i class="" aria-hidden="true"></i>
 						</div>
 <!--
 						<div class="col-10">
